# deko-shader-compiler

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY.toml  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml
crates/deko-bitview/: Cargo.toml
crates/deko-bitview/src/: lib.rs
crates/deko-compiler-utils/: Cargo.toml
crates/deko-compiler-utils/src/: cfg.rs  dataflow.rs  lib.rs  lower_bounded.rs
crates/deko-dksh/: Cargo.toml
crates/deko-dksh/src/: lib.rs
crates/deko-nak/: ACTIVE_FILES.toml  Cargo.toml  PORTING.md  UPSTREAM_FILES.txt
crates/deko-nak/src/: assign_regs.rs  bindings.rs  compiler.rs  debug.rs  ir.rs  ir_ext.rs  lib.rs  liveness.rs  lower_copy_swap.rs  opt_instr_sched_prepass.rs  sm50.rs  sph.rs  spill_values.rs
crates/deko-shader-compiler/: Cargo.toml
crates/deko-shader-compiler-macros/: Cargo.toml
crates/deko-shader-compiler-macros/src/: lib.rs
crates/deko-shader-compiler-macros/src/compiler_proc/: mod.rs
crates/deko-shader-compiler/examples/: compile_wgsl.rs
crates/deko-shader-compiler/src/: cache.rs  lib.rs  lower.rs
fuzz/: Cargo.toml
fuzz/corpus/wgsl/: compute-broadcast-first.wgsl  compute-collectives.wgsl  compute-early-return.wgsl  compute-image-atomics.wgsl  compute-loop-controls.wgsl  compute-loop-return.wgsl  compute-multi-switch.wgsl  compute-pointer-writeback.wgsl  compute-subgroup-barrier.wgsl  compute-uniform-load.wgsl  compute-vote.wgsl  compute.wgsl  fragment-cube-array-layers.wgsl  fragment-gradient-3d.wgsl  fragment-gradient-cube.wgsl  fragment-gradient.wgsl  fragment.wgsl  vertex.wgsl
fuzz/fuzz_targets/: dksh.rs  lowering.rs  wgsl.rs
tools/: check_provenance.py
