[package]
name = "deko-compiler-utils"
description = "Control-flow and dataflow utilities used by deko-shader-compiler"
keywords = ["compiler", "cfg", "dataflow", "shader"]
categories = ["compilers", "data-structures"]
readme = "../../README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
doctest = false

[lints.rust]
unsafe_code = "allow"
missing_docs = "allow"

[lints.clippy]
all = "allow"
pedantic = "allow"
