[package]
name = "deko-nak"
description = "NAK-derived Maxwell shader backend for deko-shader-compiler"
keywords = ["maxwell", "shader", "compiler", "gpu"]
categories = ["compilers", "graphics"]
readme = "../../README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true

[lints]
workspace = true

