[package]
name = "deko-nak"
description = "NAK-derived Maxwell shader backend for deko-shader-compiler"
keywords = ["maxwell", "shader", "compiler", "gpu"]
categories = ["compilers", "graphics"]
readme = "../../README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
bitview = { package = "deko-bitview", version = "0.1.0", path = "../deko-bitview" }
compiler = { package = "deko-compiler-utils", version = "0.1.0", path = "../deko-compiler-utils" }
nak-ir-proc = { package = "deko-shader-compiler-macros", version = "0.1.0", path = "../deko-shader-compiler-macros" }
paste.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true

[lints.rust]
unsafe_code = "allow"
missing_docs = "allow"
dead_code = "allow"
non_snake_case = "allow"
unfulfilled_lint_expectations = "allow"

[lints.clippy]
all = "allow"
pedantic = "allow"
