[package]
name = "deko-shader-compiler-macros"
description = "Proc macros for the NAK-derived deko-shader-compiler IR"
keywords = ["shader", "compiler", "proc-macro"]
categories = ["compilers", "development-tools::procedural-macro-helpers"]
readme = "../../README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[lints.rust]
unsafe_code = "allow"
missing_docs = "allow"

[lints.clippy]
all = "allow"
pedantic = "allow"
